web/app/themes/ppj/src/sass/components/search.sass
.page-id-182
  @include bp('portrait')
    .page-container
      height: 0

    .page-blocks
      height: 0
      display: flex
      flex-basis: auto
      flex-grow: 1
      flex-shrink: 1

    .facebook-footer
      display: none

    .footer
      font-size: 1.6rem
      padding: $common-spacing

      &__container
        display: flex
        justify-content: center

      &__nav-links
        display: flex

      &__nav-link, &__copyright
        margin: 0 0 0 $common-spacing

      &__nav-link > *, &__copyright > *
        border-left: 1px solid $color-light
        display: block
        height: 100%
        line-height: 1
        padding-left: $common-spacing
        text-align: center

      &__nav-link:first-child > *
        border-left: none

.search
  $s: &
  $border: .1rem solid $color-light
  $map-shadow: 0px 4px 16px 0px $color-medium-transparent

  background: $color-white
  margin: $common-spacing

  @include bp('portrait')
    height: 100%
    margin: 0
    position: relative
    text-align: center

  &--job-selected
    .job-summary
      background-color: $color-extremely-light

      &--selected
        background-color: $color-white

    #{$s}__map-marker
      opacity: .9

  &__header

    @include bp('portrait')
      padding: $common-spacing
      width: 38%

  &__title
    @extend .common-header
    @include bp('portrait')
      margin-bottom: $common-spacing

      &:before
        margin-left: auto
        margin-right: auto

  &__prompt
    @include bp('portrait')
      font-size: $font-size-medium
      margin-bottom: $common-spacing * 2

  &__form
    position: relative

    @include bp('portrait')

  &__geolocation
    $gl: &
    font-size: $font-size-small
    font-weight: $font-weight-bold
    margin: $common-spacing 0
    text-decoration: underline
    transition: $main-transition-duration

    &-button

    @include bp('portrait')

    &-icon
      $size: 2rem
      height: $size
      margin-right: .4rem
      width: $size

    &--is-busy
      opacity: 0.5

    &--is-active
      #{$gl}-icon
        fill: purple

      #{$gl}-button
        color: purple

  &__input
    border: .2rem solid $color-light
    border-radius: 2em
    box-sizing: border-box
    display: block
    font-size: $font-size-quite-tiny
    height: 4rem
    padding: $common-spacing/2 $common-spacing
    transition: $main-transition-duration
    width: 100%

    @include bp('portrait')
      font-size: $font-size-small

    @include bp('large')

    &:focus
      border-color: $color-main

  $formHeight: 4rem

  &__button-search
    background-color: $color-main
    border-radius: 2rem
    color: $color-white
    display: block
    height: $formHeight
    position: absolute
    right: 0
    top: 0
    transition: background-color $main-transition-duration
    width: $formHeight

    &-circle
      $diameter: 1.7rem
      background: inherit
      border: .25rem solid $color-white
      border-radius: 1.1rem
      display: inline-block
      height: $diameter
      position: absolute
      right: 1.1rem
      top: 1.1rem
      width: $diameter

    &-rectangle
      background-color: $color-white
      height: .7rem
      position: absolute
      right: 2.5rem
      top: 2.2rem
      transform: rotate(45deg)
      width: .4rem

  &__button-clear-search
    border-left: $border
    color: transparent
    font-size: $font-size-small
    margin: 1rem 0
    opacity: 0
    text-shadow: 0 0 0 $color-light
    transition: $main-transition-duration
    width: $formHeight

    &--enabled
      opacity: 1

    &-container
      display: flex
      height: $formHeight
      position: absolute
      right: 4rem
      top: 0

  &__jobs-available-container
    margin: $common-spacing/2 0

    @include bp('portrait')
      margin: 0
      padding: 0 $common-spacing
      position: relative
      width: 38%

  &__jobs-available
    border-bottom: $border
    border-top: $border
    font-weight: $font-weight-bold
    padding: $common-spacing
    text-align: left

  &__results
    $sr: &
    @include bp('portrait')
      flex: 1
      max-height: 100vh

  &__view-controls
    display: flex
    justify-content: space-between
    width: 100%

  &__view-container
    height: 100%
    margin: $common-spacing/2 0

    @include bp('portrait')
      margin-bottom: 0
      margin-top: 0

  &__map-view
    @include bp('portrait')
      display: flex
      flex-direction: row-reverse
      height: 100%
      justify-content: space-between

  &__rectangle
    border-bottom: $border
    border-top: $border
    border-bottom-width: .2rem
    border-top-width: .2rem
    box-sizing: border-box

    @include bp('portrait')
      position: absolute
      top: 0
      bottom: 0
      left: 0
      right: 0

  &__map-container
    position: relative

    @include bp('portrait')
      bottom: 0
      position: absolute
      right: 0
      top: 0
      width: 62%

    @include bp('landscape')

  &__map-zoom-button-container
    position: absolute
    right: $common-spacing / 2
    top: $common-spacing / 2
    z-index: 1

    @include bp('portrait')
      right: $common-spacing
      top: $common-spacing

  &__map-button-zoom
    $mbz: &
    $size: 3rem
    align-items: center
    background-color: $color-white
    border: 0 solid $color-light
    box-shadow: $map-shadow
    border-radius: $size
    cursor: pointer
    display: flex
    height: $size
    justify-content: center
    width: $size

    &-icon
      fill: $color-dark
      height: 100%
      width: 100%

    .zoom-icon-background
      fill: blue

    @include bp('portrait')
      $size: 6rem
      height: $size
      width: $size

    &:active
      position: relative
      top: .1rem

    &:before
      display: block
      color: $color-dark
      font-size: 3rem

    &--out
      margin-top: $common-spacing / 2

      @include bp('portrait')
        margin-top: $common-spacing

  &__view-list-container
    @include bp('portrait')
      bottom: 0
      left: 0
      position: absolute
      top: 24.9rem
      width: 38%

    @include bp('landscape')

  &__view-list
    @include bp('portrait')
      height: 100%
      overflow-y: auto
      padding: 0 $common-spacing

    &-element
      background-color: $color-white
      border-top: $border
      cursor: pointer

      // FADING:
      // https://codepen.io/anon/pen/opBRLp

      &:first-child
        border-top: none
        @include bp('portrait')
          position: relative
          z-index: 2

      &:last-child
        @include bp('portrait')
          position: relative

      &:nth-child(2):before,
      &:nth-last-child(2):after
        @include bp('portrait')
          content: ''
          display: block
          height: $common-spacing * 5
          left: 0
          pointer-events: none
          position: absolute
          right: 0

      &:nth-child(2):before
        @include bp('portrait')
          background: linear-gradient(to bottom, $color-white, $color-transparent2)
          top: 0
          z-index: 1

      &:nth-last-child(2):after
        @include bp('portrait')
          background: linear-gradient(to top, $color-white, $color-transparent2)
          bottom: 0

      &:hover:nth-child(2):before
        @include bp('portrait')
          cursor: n-resize

      &:hover:nth-last-child(2):after
        @include bp('portrait')
          cursor: s-resize

  &__map
    display: flex
    height: 20rem
    justify-content: center
    position: relative
    width: 100%

    @include bp('portrait')
      bottom: 0
      height: 100%
      left: 0
      position: absolute
      right: 0
      top: 0

  &__map-marker
    $c: &
    $size: $common-spacing * 2
    cursor: pointer
    pointer-events: none
    position: absolute
    transition: opacity $main-transition-duration

    &:hover
      opacity: 1
      z-index: 2

    &-icon

    &-label
      background-color: $color-white
      border: 1px solid $color-light
      border-radius: .25em
      box-shadow: $map-shadow
      color: $color-dark
      font-size: 1.6rem
      font-weight: $font-weight-bold
      line-height: 1
      opacity: 0
      padding: .5em
      pointer-events: none
      position: absolute
      top: .8rem
      transform: translateX(-50%)
      white-space: nowrap
      z-index: 1

      @include bp('large')
        font-size: 1.8rem

    &--job-location-group
      #{$c}-icon
        background-color: $color-white
        border-color: $color-dark
        background: url('/app/themes/ppj/dest/img/inactive_pin.png')
        background-size: 3.2rem 3.8rem
        cursor: pointer
        left: - 1.55rem
        height: 3.8rem
        pointer-events: auto
        position: relative
        top: - 3.5rem
        width: 3.2rem

    &--search-term
      opacity: 1

      #{$c}-icon
        $size: 4.8rem
        background: url('/app/themes/ppj/dest/img/search_pin.png')
        background-size: $size $size
        height: $size
        left: -$size/2
        position: relative
        width: $size
        top: -$size
        z-index: 1000


    &#{$c}--selected
      opacity: 1
      transition: opacity $main-transition-duration
      z-index: 1

      #{$c}-icon
        border-color: $color-secondary
        background: url('/app/themes/ppj/dest/img/active_pin.png')
        background-size: 3.2rem 3.8rem
        border-width: .6rem

      #{$c}-label
        opacity: 1
        pointer-events: initial

    &#{$c}--hover
      #{$c}-label
        opacity: 1
        transition: opacity $main-transition-duration


    &--datum
      box-shadow: none

  &__job-post
    font-size: $font-size-small
    line-height: 1.2
    padding: $common-spacing/2 0
    position: relative

    &-distance
      font-weight: $font-weight-bold

    &-position
      font-weight: $font-weight-bold

    &-salary
      font-weight: $font-weight-bold
      position: absolute
      right: 0
      top: $common-spacing/2

    &-prison

    &-link
      bottom: $common-spacing/2
      position: absolute
      right: 0
      text-decoration: underline

  &__pagination-links
    display: flex
    justify-content: space-between

  &__pagination
    display: flex
    font-size: $font-size-small
    justify-content: space-between
    margin: $common-spacing/2 0

    &-skip-link
      color: $color-light
      display: flex
      align-items: center
      margin: 0 $common-spacing
      text-decoration: underline

      &--enabled
        color: $color-dark

    &-page-numbers-container
      align-items: center
      display: flex
      justify-content: space-around
      margin: 0 $common-spacing

      & > *
        width: 2rem

    &-of
      text-align: center

    &-current-page-number
      text-align: right

    &-total-pages

    &-direction, &-link
      border-width: .2rem
      border-style: solid
      border-radius: 1rem
      display: block
      font-size: $font-size-large
      font-weight: $font-weight-bold
      height: 4rem
      transition: all .2s
      width: 4rem

    &-direction
      border-color: $color-light
      color: $color-light
      cursor: initial

      &:first-child
        order: initial

      &:hover ~ .search__pagination-link--enabled
        border-color: $color-dark
        color: $color-dark

      &--enabled
        border-color: $color-dark
        color: $color-dark
        cursor: pointer

        &:hover ~ .search__pagination-link--enabled
          border-color: $color-dark
          color: $color-dark

    &-link
      border-color: $color-light
      color: $color-light

      &:hover
        border-color: $color-dark
        color: $color-dark

    &:not(:hover)

      .search__pagination

        &-link
          color: $color-light

          &--enabled
            border-color: $color-dark
            color: $color-dark

